Added virtual host and proxy configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,11 @@
 version: "3.7"
 services:
+  nginx-proxy:
+    image: jwilder/nginx-proxy
+    ports:
+      - "80:80"
+    volumes:
+      - /var/run/docker.sock:/tmp/docker.sock:ro
   web:
     build:
       context: ./web
@@ -7,7 +13,10 @@ services:
       - /app/node_modules
       - ./web:/app
     ports:
-      - "3001:3000"
+      - 3000
+    environment:
+      - VIRTUAL_HOST=test_web.localhost
+      - VIRTUAL_PORT=3000
   api:
     build:
       context: ./api
@@ -15,4 +24,7 @@ services:
       - /app/node_modules
       - ./api:/app
     ports:
-      - "3000:3000"
+      - 3000
+    environment:
+      - VIRTUAL_HOST=test_api.localhost
+      - VIRTUAL_PORT=3000
