--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,9 @@ services:
     image: jwilder/nginx-proxy
     ports:
       - "80:80"
+      - "443:443"
     volumes:
+      - ./docker/certs:/etc/nginx/certs
       - /var/run/docker.sock:/tmp/docker.sock:ro
   web:
     build:
